<resources>
    <!-- Names -->
    <string name="application_name">Popular Movie</string>
    <string name="database_name">movie</string>

    <!-- Menu items -->
    <string name="most_popular_menu_item">Most popular</string>
    <string name="top_rated_menu_item">Highest rated</string>
    <string name="favorites_menu_item">Favorites</string>

    <!-- Image descriptions -->
    <string name="poster_description">Poster</string>
    <string name="play_image_description">Play image</string>

    <!-- Tabs -->
    <string name="overview_tab">Info</string>
    <string name="trailers_tab">Trailers</string>
    <string name="reviews_tabs">Reviews</string>

    <!-- Labels -->
    <string name="original_title_label">Original title</string>
    <string name="vote_average_label">Vote average</string>
    <string name="release_date_label">Release date</string>
    <string name="overview_label">Overview</string>

    <!-- URLs -->
    <string name="tmdb_base_url">http://api.themoviedb.org</string>
    <string name="tmdb_image_base_url">http://image.tmdb.org/t/p/w185</string>
    <string name="youtube_base_uri">vnd.youtube:</string>
    <string name="youtube_base_url">https://www.youtube.com/watch?v=</string>

    <!-- JSON elements -->
    <string name="tmdb_json_result_element">results</string>

    <!-- Misc -->
    <string name="trailer_info_format">%1$s-%2$s / %3$dp</string>
    <string name="review_label_format">Review #%1$d by %2$s</string>
    <string name="network_unavailable_error">Network unavailable</string>
</resources>