<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.example.android.popularmovie.room.entity.Movie" />
    </data>

    <androidx.core.widget.NestedScrollView style="@style/nested_scroll_view">

        <LinearLayout style="@style/linear_layout">

            <androidx.cardview.widget.CardView
                android:id="@+id/original_title_card"
                style="@style/card_view">

                <LinearLayout style="@style/linear_layout">

                    <TextView
                        android:id="@+id/original_title_label"
                        style="@style/overview_label_text_view"
                        android:text="@string/original_title_label"
                        tools:text="@tools:sample/lorem" />

                    <TextView
                        android:id="@+id/original_title_value"
                        style="@style/overview_value_text_view"
                        android:text="@{movie.originalTitle}"
                        android:textAppearance="?textAppearanceListItem"
                        tools:text="@tools:sample/lorem" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/release_date_card"
                style="@style/card_view">

                <LinearLayout style="@style/linear_layout">

                    <TextView
                        android:id="@+id/release_date_label"
                        style="@style/overview_label_text_view"
                        android:text="@string/release_date_label"
                        tools:text="@tools:sample/lorem" />

                    <TextView
                        android:id="@+id/release_date_value"
                        style="@style/overview_value_text_view"
                        android:text="@{movie.releaseDate}"
                        android:textAppearance="?textAppearanceListItem"
                        tools:text="@tools:sample/lorem" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/vote_average_card"
                style="@style/card_view">

                <LinearLayout style="@style/linear_layout">

                    <TextView
                        android:id="@+id/vote_average_label"
                        style="@style/overview_label_text_view"
                        android:text="@string/vote_average_label"
                        tools:text="@tools:sample/lorem" />

                    <TextView
                        android:id="@+id/vote_average_value"
                        style="@style/overview_value_text_view"
                        android:text="@{movie.voteAverage}"
                        android:textAppearance="?textAppearanceListItem"
                        tools:text="@tools:sample/lorem" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/overview_card"
                style="@style/card_view">

                <LinearLayout style="@style/linear_layout">

                    <TextView
                        android:id="@+id/overview_label"
                        style="@style/overview_label_text_view"
                        android:text="@string/overview_label"
                        tools:text="@tools:sample/lorem" />

                    <TextView
                        android:id="@+id/overview_value"
                        style="@style/overview_value_text_view"
                        android:text="@{movie.overview}"
                        android:textAppearance="?textAppearanceListItem"
                        tools:text="@tools:sample/lorem" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>